this is mission7

--- a/DateMe/Views/Home/DatingApplication.cshtml
+++ b/DateMe/Views/Home/DatingApplication.cshtml
@@ -8,9 +8,18 @@
 
 <div>
     <form method="post">
-        <label asp-for="Category">Category:</label>
-        <input asp-for="Category" />
+
+        <label asp-for="CategoryId">Category:</label>
+        <select asp-for="CategoryId">
+            <option value="">Select a Category</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+                <option value="@c.CategoryId">@c.CategoryName</option>
+            }
+        </select>
         <br />
+
+        <div asp-validation-summary="All"></div>
 
         <label asp-for="Title">Title:</label>
         <input asp-for="Title" />
