--- a/DateMe/Views/Home/Index.cshtml
+++ b/DateMe/Views/Home/Index.cshtml
@@ -9,4 +9,8 @@
 
 <img src="~/img/JoelHiltonHeadshot.jpg" />
 <br />
+<br />
 
+<div>
+    <a asp-controller="Home" asp-action="MovieList">View the Movie List</a>
+</div>
